--- a/ui/style2.css
+++ b/ui/style2.css
@@ -1,1 +1,9 @@
-
+ .block{
+         color:grey;
+         font-family:sans-serif;
+         background-color:purple;
+         margin:0 auto;
+         padding-top: 70px;
+         padding-left: 20px;
+         padding-right: 20px;
+     }
